--- a/DFOptimizerApp/app/src/main/res/layout/activity_http_connect.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_http_connect.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray"
-    tools:context=".HttpConnect">
+    tools:context=".HttpConnect"><![CDATA[
 
 
     android:layout_width="fill_parent"
@@ -15,19 +15,20 @@
     tools:layout_editor_absoluteY="196dp">
 
 
+    ]]>
+
     <Button
         android:id="@+id/httpBut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="177dp"
-        android:layout_marginBottom="44dp"
-        android:textColor="#333333"
+        android:layout_marginBottom="15dp"
         android:backgroundTint="#4ab9f5"
         android:text="Generate Optimized Lineup"
+        android:textColor="#333333"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/numberOfLineups" />
 
     <TextView
         android:id="@+id/textView3"
@@ -37,13 +38,41 @@
         android:layout_marginLeft="30dp"
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
-        android:layout_marginBottom="35dp"
-        android:textColor="#ffffff"
+        android:layout_marginBottom="72dp"
         android:text="View Optimized Lineup Here"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/httpBut" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="82dp"
+        android:layout_marginBottom="36dp"
+        android:text="How many lineups would you like to generate?"
+        android:textColor="#ffffff"
+        app:layout_constraintBottom_toTopOf="@+id/numberOfLineups"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/numberOfLineups"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="31dp"
+        android:ems="10"
+        android:inputType="number"
+        android:text="1"
+        android:textColor="#ffffff"
+        app:layout_constraintBottom_toTopOf="@+id/httpBut"
+        app:layout_constraintStart_toStartOf="@+id/httpBut"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
