--- a/DFOptimizerApp/app/src/main/res/layout/activity_list_players.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_list_players.xml
@@ -5,71 +5,94 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <TextView
         android:id="@+id/instructionTxt"
-        android:layout_width="382dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="61dp"
-        android:layout_marginBottom="2dp"
+        android:layout_width="340dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginLeft="9dp"
+        android:layout_marginTop="38dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="19dp"
         android:text="Here are the players who are available today. Choose any four that you would like to include in your lineup."
         app:layout_constraintBottom_toTopOf="@+id/remainingSalaryTxt"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/searchView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/continueBtn"
-        android:layout_width="105dp"
+        android:layout_width="0dp"
         android:layout_height="47dp"
-        android:layout_marginStart="79dp"
-        android:layout_marginLeft="79dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginBottom="51dp"
+        android:layout_marginStart="93dp"
+        android:layout_marginLeft="93dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="40dp"
         android:text="Continue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/clearPlayers"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playerListView" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
-    <ListView
-        android:id="@+id/playerListView"
+    <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="403dp"
         android:layout_height="360dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="24dp"
-        android:scrollbars="vertical"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="39dp"
         app:layout_constraintBottom_toTopOf="@+id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/positionFilter" />
+        app:layout_constraintTop_toBottomOf="@+id/positionFilter">
+
+        <TableLayout
+            android:id="@+id/playerListView"
+            android:layout_width="403dp"
+            android:layout_height="360dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="24dp"
+            android:scrollbars="vertical"
+            android:stretchColumns="*"
+            android:clickable="true"
+            app:layout_constraintBottom_toTopOf="@+id/continueBtn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/positionFilter" />
+    </ScrollView>
 
     <SearchView
         android:id="@+id/searchView"
-        android:layout_width="250dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginRight="27dp"
-        android:layout_marginBottom="11dp"
+        android:layout_width="195dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="14dp"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/positionFilter"
+        app:layout_constraintBottom_toBottomOf="@+id/remainingSalaryTxt"
         app:layout_constraintEnd_toStartOf="@+id/remainingSalaryTxt"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/instructionTxt" />
 
     <TextView
         android:id="@+id/remainingSalaryTxt"
-        android:layout_width="88dp"
-        android:layout_height="58dp"
-        android:layout_marginEnd="22dp"
-        android:layout_marginRight="22dp"
-        android:layout_marginBottom="13dp"
+        android:layout_width="106dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="31dp"
         android:text="Rem. Salary: $60000"
         app:layout_constraintBottom_toTopOf="@+id/positionFilter"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,31 +101,27 @@
 
     <Spinner
         android:id="@+id/positionFilter"
-        android:layout_width="322dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="39dp"
-        android:layout_marginLeft="39dp"
-        android:layout_marginEnd="39dp"
-        android:layout_marginRight="39dp"
-        android:layout_marginBottom="22dp"
+        android:layout_width="340dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginRight="44dp"
+        android:layout_marginBottom="8dp"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/playerListView"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/remainingSalaryTxt" />
 
     <Button
         android:id="@+id/clearPlayers"
-        android:layout_width="105dp"
+        android:layout_width="0dp"
         android:layout_height="47dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginRight="90dp"
-        android:layout_marginBottom="51dp"
+        android:layout_marginEnd="78dp"
+        android:layout_marginRight="78dp"
         android:text="Clear All"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/continueBtn"
-        app:layout_constraintTop_toBottomOf="@+id/playerListView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toEndOf="@+id/continueBtn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
